2009-11-12  Per Starbäck  <per@starback.se>  (tiny change)

	* dired.el (dired-save-positions, dired-restore-positions): New funs.
	(dired-revert): Use them (bug#4880).

2009-11-12  Dan Nicolaescu  <dann@ics.uci.edu>

	* tooltip.el (tooltip-frame-parameters): Undo previous change.

2009-11-12  Juri Linkov  <juri@jurta.org>

	* ffap.el (ffap-alternate-file-other-window, ffap-literally):
	New functions.
	(find-file-literally-at-point): Alias of `ffap-literally'.

2009-11-12  Dan Nicolaescu  <dann@ics.uci.edu>

	* textmodes/ispell.el (ispell-skip-region-alist):
	* textmodes/css-mode.el (auto-mode-alist):
	* progmodes/compile.el (auto-mode-alist):
	* international/mule.el (ctext-non-standard-encodings-alist)
	(ctext-non-standard-encodings-regexp):
	* simple.el (shell-command-switch, text-read-only):
	* replace.el (occur-mode-map):
	* paths.el (rmail-file-name):
	* jka-cmpr-hook.el (jka-compr-build-file-regexp):
	* find-file.el (ff-special-constructs):
	* files.el (file-name-handler-alist):
	* composite.el: Purecopy strings.

	* emacs-lisp/cl-macs.el (define-compiler-macro): Purecopy the file name.

2009-11-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* widget.el (define-widget): Purecopy the docstring.
	* international/mule-cmds.el (charset): Do not purecopy the
	docstring here, define-widget does it.

	* textmodes/texinfo.el (texinfo-open-quote, texinfo-close-quote):
	* textmodes/bibtex-style.el (auto-mode-alist):
	* progmodes/inf-lisp.el (inferior-lisp-prompt):
	* progmodes/compile.el (compile-command):
	* language/korea-util.el (default-korean-keyboard):
	* international/mule-conf.el (file-coding-system-alist):
	* emacs-lisp/eldoc.el (eldoc-minor-mode-string):
	* tooltip.el (tooltip-frame-parameters):
	* newcomment.el (comment-end, comment-padding):
	* dired.el (dired-trivial-filenames):
	* comint.el (comint-file-name-prefix): Purecopy initial values.

2009-11-11  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-advice-minibuffer-electric-separator)